--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "co-fs": "^1.2.0",
     "hash-stream": "^1.0.0",
     "koa-compose": "^2.2.0",
-    "cssdeps": "^1.0.0"
+    "cssdeps": "^1.0.0",
+    "mime": "^1.2.11"
   },
   "devDependencies": {
     "mocha": "^1.17"
