add javascript support

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "hash-stream": "^1.0.0",
     "koa-compose": "^2.2.0",
     "cssdeps": "^1.0.0",
+    "requires": "^1.0.0",
+    "imports": "^1.0.0",
     "mime": "^1.2.11"
   },
   "devDependencies": {
