--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   "dependencies": {
     "debug": "*",
     "co": "^3",
-    "co-fs": "^1.2.0",
     "hash-stream": "^1.0.0",
     "koa-compose": "^2.2.0",
+    "type-is": "^1.1.0",
     "cssdeps": "^1.0.0",
     "requires": "^1.0.0",
     "imports": "^1.0.0",
@@ -25,7 +25,7 @@
     "mocha": "^1.17"
   },
   "scripts": {
-    "test": "mocha --harmony-generators --reporter spec"
+    "test": "mocha --harmony-generators --reporter spec --bail"
   },
   "main": "lib"
 }
