--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   "license": "MIT",
   "repository": "normalize/walker.js",
   "dependencies": {
-    "debug": "*",
     "normalize-dependencies": "*",
-    "co": "^3",
     "hash-stream": "^1.0.0",
     "koa-compose": "^2.2.0",
     "type-is": "^1.1.0",
-    "mime": "^1.2.11"
+    "mime": "^1.2.11",
+    "debug": "*",
+    "co": "^3"
   },
   "devDependencies": {
     "mocha": "^1.17"
