use mime-extended

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "koa-compose": "^2.2.0",
     "type-is": "^1.1.0",
     "mime": "^1.2.11",
+    "mime-extended": "^1.0.0",
     "debug": "*",
     "co": "^3"
   },
